--- a/public/500.html
+++ b/public/500.html
@@ -3,8 +3,8 @@
 <head>
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href='https://fonts.googleapis.com/css?family=Anton|Passion+One|PT+Sans+Caption' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="500.js">
+  <!-- <link href='https://fonts.googleapis.com/css?family=Anton|Passion+One|PT+Sans+Caption' rel='stylesheet' type='text/css'> -->
+  <!-- <link rel="stylesheet" href="500.js"> -->
   <style>
   body {
     background-color: #EFEFEF;
